# meta-llama-hacakton-GCV

./: README.md
backend/: ESI_triage.md  api.py  init.sh  pyproject.toml  startup.sh  test_translator.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: Chat.js  Results.js  SymptomSummary.js
