[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llama_index",
    "fastapi",
    "pydantic",
    "llama-index-llms-ollama",
    "uvicorn",
    "slowapi",
    "transformers",
    "pytest",
    "torch",
    "blobfile",
    "protobuf",
    "SentencePiece",
]
